--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Esi sveicināts manā super lapa</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cum similique ullam repellendus nemo totam delectus magni amet tempore, earum eos doloribus quis sit aliquam odio, rerum voluptas neque tempora!
+    <p style="color:aqua">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cum similique ullam repellendus nemo totam delectus magni amet tempore, earum eos doloribus quis sit aliquam odio, rerum voluptas neque tempora!
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, voluptatibus eveniet ullam, facilis minima sint commodi doloribus obcaecati dicta earum saepe, rerum sit quae veniam non cupiditate illo quos repudiandae.
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi fugit vitae commodi voluptatibus, sint neque velit possimus fugiat voluptates perspiciatis error iusto porro, natus repellat eum voluptas, dicta ratione ab?
 </body>
