--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mana lapa</title>
 </head>
+<style>
+    p {
+        color:brown
+    }
+    .artical {
+        padding: 40px;
+        border: 10px solid black;
+        margin: 15px;
+
+
+    }
+
+    #end{
+        background-color: bisque;
+    }
+    .box {
+        width: 500px;
+        height: 200px;
+        background-color:blueviolet;
+    }
+    </style>
+</head>
 <body>
     <h1>Esi sveicināts manā super lapa</h1>
     <p style="color:aqua">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cum similique ullam repellendus nemo totam delectus magni amet tempore, earum eos doloribus quis sit aliquam odio, rerum voluptas neque tempora!
