--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mana lapa</title>
+    <link rel="stylesheet" type= "text/css" src= "css/style.css">
 </head>
+
 <style>
     p {
         color:brown
