--- a/index.html
+++ b/index.html
@@ -9,29 +9,40 @@
 
 <style>
     p {
-        color:brown
-    }
-    .artical {
-        padding: 40px;
-        border: 10px solid black;
-        margin: 15px;
+    color: red;
+}
 
+.article {
+    padding: 40px;
+    border: 10px solid black;
+    margin: 15px;
+}
 
-    }
+#end{
+    background-color:bisque;
+}
 
-    #end{
-        background-color: bisque;
-    }
-    .box {
-        width: 500px;
-        height: 200px;
-        background-color:blueviolet;
-    }
+.box {
+    width: 500px;
+    height: 200px;
+    background-color: blueviolet;
+}
+
+.box p{
+    color:cyan;
+}
+
     </style>
 <body>
-    <h1>Esi sveicināts manā super lapa</h1>
-    <p style="color:aqua">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cum similique ullam repellendus nemo totam delectus magni amet tempore, earum eos doloribus quis sit aliquam odio, rerum voluptas neque tempora!
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, voluptatibus eveniet ullam, facilis minima sint commodi doloribus obcaecati dicta earum saepe, rerum sit quae veniam non cupiditate illo quos repudiandae.
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi fugit vitae commodi voluptatibus, sint neque velit possimus fugiat voluptates perspiciatis error iusto porro, natus repellat eum voluptas, dicta ratione ab?
+    <h1>Esi sveicināts manā super lapā!</h1>
+    <p style="color:aquamarine;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, ut nisi cumque sapiente consequatur atque quasi tempore nesciunt iste veniam sunt molestiae odio repellat, aut adipisci nam at maiores minima?</p>
+    <p class="article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate reiciendis doloremque fugit error quidem omnis vitae a excepturi dolores nihil commodi nam, ducimus facilis? Blanditiis quidem consequatur voluptates veritatis aspernatur.</p>
+    <p class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis ducimus distinctio repellat ipsa fugiat veniam, nulla, rerum quae aspernatur quos omnis iure ab qui explicabo cupiditate soluta, voluptate temporibus.</p>
+    <p id="end">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem repellendus obcaecati aspernatur tempora maiores quis inventore commodi autem iste. Rerum architecto expedita delectus dolore perferendis reiciendis optio in a qui.</p>
+
+    <div class="box">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt est sapiente repellendus facilis labore, aperiam maiores molestiae, nobis laboriosam blanditiis possimus autem? Nisi quasi animi minima magni excepturi itaque ex!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint odio hic voluptas recusandae, corrupti, eligendi tenetur illum facere minus, quidem ducimus. Nostrum consequuntur alias eaque molestias, mollitia earum vitae id?</p>
+    </div>
 </body>
 </html>
