--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mana lapa</title>
-    <link rel="stylesheet" type= "text/css" src= "css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <style>
     p {
     color: red;
@@ -31,8 +30,7 @@
 .box p{
     color:cyan;
 }
-
-    </style>
+</style>
 <body>
     <h1>Esi sveicināts manā super lapā!</h1>
     <p style="color:aquamarine;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, ut nisi cumque sapiente consequatur atque quasi tempore nesciunt iste veniam sunt molestiae odio repellat, aut adipisci nam at maiores minima?</p>
